# Medicine-ML-and-RAG-System

./: .gitignore  README.md  build_index.py  data.ipynb  pyproject.toml  requirements.txt  vercel.json
api/: app.py
app/: streamlit-app.py
artifacts/faiss_index/: index.faiss  index.pkl
data/processed/knowledge_base/: Abortion.txt  Alcohol.txt  Anaemia.txt  Animal bites.txt  Antimicrobial resistance.txt  Anxiety disorders.txt  Arsenic.txt  Asbestos.txt  Asthma.txt  Autism.txt  Bacterial vaginosis.txt  Bipolar disorder.txt  Blindness and vision impairment.txt  Botulism.txt  Breast cancer.txt  Brucellosis.txt  Burns.txt  Buruli ulcer (Mycobacterium ulcerans infection).txt  Campylobacter.txt  Cancer.txt  Candidiasis (yeast infection).txt  Cardiovascular diseases (CVDs).txt  Cervical cancer.txt  Chagas disease (also known as American trypanosomiasis).txt  Chikungunya.txt  Childhood cancer.txt  Chlamydia.txt  Cholera.txt  Chromoblastomycosis.txt  Chronic obstructive pulmonary disease (COPD).txt  Colorectal cancer.txt  Congenital disorders.txt  Coronavirus disease (COVID-19).txt  Deafness and hearing loss.txt  Dementia.txt  Dengue.txt  Depressive disorder (depression).txt  Diabetes.txt  (+129 more)
deployment/: Dockerfile
models/: Label-Encoder.joblib  Random-Forest-Model.joblib
notebooks/: rag.ipynb
src/data_ingestion/: clean_data.py  scrapper_who.py
src/data_transformation/: preprocess.py
src/pipelines/: training_pipeline.py
src/prediction/: predict.py
src/rag/: chain.py  chunk.py  document_loader.py  embeddings.py  pipeline.py  retriever.py  vector_store.py
(+333 files in other folders)
