[project]
name = "medicine-rag-system"
version = "0.1.0"
dependencies = [
    # Add your dependencies here, e.g.:
    "langchain",
    "langchain-google-genai",
    "faiss-cpu",
    "requests",
    "numpy",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]